[package]
name = "physical-engine"
version = "0.1.0"
authors = ["Grzegorz Kowaluk <grzkowaluk@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1"
env_logger = "0.11.3"
log = "0.4.21"
wgpu = "0.19.3"
winit = "0.29.14"
pollster = "*"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "*"
wgpu = { version = "0.19.3", features = ["webgl"]}
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = [
    "Document",
    "Window",
    "Element",
]}

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
